# phage-novo-monolith

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  password_validation.py  permissions.py  views.py
accounts/migrations/: 0001_initial.py  0002_memberprofile_photo.py
accounts/tests/: test_models.py  test_views.py
adminui/: apps.py  forms.py  urls.py  views.py
adminui/tests/: test_admin.py  test_surveys_admin.py
camp/: forms.py  models.py  services.py  taxes.py  urls.py  views.py
camp/migrations/: 0001_initial.py  0002_taxaddon_taxoverride_taxtier.py  0003_campyear_camp_survey.py
camp/templatetags/: money.py
camp/tests/: test_dashboard.py  test_phagebook.py  test_tax_views.py  test_taxes.py
content/: context_processors.py  forms.py  markdown.py  media.py  models.py  urls.py  views.py
content/migrations/: 0001_initial.py  (+3 more)
core/: models.py  urls.py  views.py
deploy/: thephage.toml.example
design_docs/: admin_and_pages.md  content_media_security.md  design.md  implementation_plan.md  models.md  outline.md  phagebook_design.md  storage.md  stripe_implementation.md  survey_design.md  testing_design.md  testing_implementation.md  ui_baseline.md
docs/: README.md  admin-ui.md  backup-and-restore.md  deployment.md  pre-launch-checklist.md  stripe.md  yearly-rollover.md
payments/: checkout.py  models.py  stripe_client.py  urls.py  views.py  webhooks.py
public/: index.html
surveys/: forms.py  models.py  question_types.py  services.py  urls.py  views.py
templates/: admin_base.html  base.html  member_base.html  public_base.html
tests/: test_config.py
thephage/: asgi.py  config.py  settings.py  urls.py  wsgi.py
(+62 files in other folders)
